test/corpus/landing-saying-less
===========
Saying less
===========
⍥◡+9 .1
-----------
(source_file
	(expr
		(line
			(unit (macro_invk
				(macro (macro_ident (builtin_macro1 (prim_repeat))))
				(macro_args
					(unit (macro_invk
						(macro (macro_ident (builtin_macro1 (prim_below))))
						(macro_args (unit (func (builtin_func2 (prim_add)))))
					)
				))
			))
			(unit (literal (number)))
			(unit (func (builtin_func1 (prim_duplicate))))
			(unit (literal (number)))
		)
	)
)
